Bug 70884 virtual scroll and on push embedded viewsheet (#1364)
* Bug #70944, add virtual scrolling to viewsheet viewer, make VSViewsheet use on push change detection.

* Bug #71466, don't show virtual scroll placeholder when assembly is not visible, use NgZone.run() to update the scroll position property.

--- a/web/projects/portal/src/app/vsobjects/objects/vs-object-container.component.scss
+++ b/web/projects/portal/src/app/vsobjects/objects/vs-object-container.component.scss
@@ -26,10 +26,30 @@
   height: 0px;
 }
 
-.focus-assembly {
+.focus-assembly, .non-rendered-placeholder {
   position: absolute;
   box-sizing: initial;
   pointer-events: none;
+}
+
+.non-rendered-placeholder {
+  background: rgba(255,255,255,0.8);
+  border: 1px solid rgba(0,0,0,0.2);
+  border-radius: 3px;
+  > .nrp-content {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    > .nrp-label {
+      position: relative;
+      font-weight: bold;
+      font-size: 16px;
+      color: rgba(0,0,0,0.35);
+      text-align: center;
+    }
+  }
 }
 
 .pop-component-bg {
